[metadata]
name = aci-integration-module
summary = Integration module for ACI
description-file =
    README.rst
author = Cisco Systems, Inc.
author-email = apicapi@noironetworks.com
classifier =
    Environment :: ACI
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    aim
data_files =
    etc/aim =
        etc/aim/aim.conf
        etc/aim/aimctl.conf

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = aim/locale
domain = aim

[update_catalog]
domain = aim
output_dir = aim/locale
input_file = aim/locale/aim.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = aim/locale/aim.pot


[entry_points]
console_scripts=
    aimctl = aim.tools.cli.service:aimctl
    aimdebug = aim.tools.cli.service:aimdebug
    aim-aid = aim.tools.cli.service:aid
    aim-event-service-polling = aim.tools.cli.service:event_polling
    aim-event-service-rpc = aim.tools.cli.service:rpc
